--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Ridebright</title>
+
         <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/media.css">
+        <link rel="stylesheet" href="public/app.css">
     </head>
+
     <body>
         <div class="navbar">
             <div class="logo">
-                <img src="imgs/logo.png" width="140" alt="">
+                <img src="public/images/logo.png" width="140" alt="">
             </div>
             <div class="navbar-nav">
                 <ul>
@@ -30,12 +35,11 @@
                 </ul>
             </div>
         </div>
+
         <header>
             <div class="header-content">
                     <h1>
-                        There’s a better way to
-                        explore out your
-                        country.
+                        There’s a better way to explore out your country.
                     </h1>
                     <p>
                         Ridebright is built up with your needs in mind, we provide
@@ -43,22 +47,23 @@
                         and healtyh way  
                     </p>
                     <a href="#" class="get-started">
-                       <img src="imgs/wheel.svg" width="20" alt=""> 
+                       <img src="public/images/wheel.svg" width="20" alt=""> 
                        <span>Get Started</span>
                     </a>
                     <a href="#" class="watch-demo">
-                        <img src="imgs/play-demo.svg" width="20" alt=""> 
+                        <img src="public/images/play-demo.svg" width="20" alt=""> 
                         <span>Play a Demo</span>
                     </a>
             </div>
             <div class="header-illustartion">
-              <img src="imgs/header.png" alt="" class="img-fluid">
+              <img src="public/images/header.png" alt="" class="img-fluid">
             </div>
         </header>
+        
         <section class="about">
             <div class="about-container">
                 <div class="about-illustartion">
-                    <img src="imgs/about.svg" class="img-fluid" alt="">
+                    <img src="public/images/about.svg" class="img-fluid" alt="">
                 </div>
                 <div class="about-content">
                     <h1>
@@ -78,7 +83,7 @@
             <h1>How To Use</h1>
             <div class="container">
                 <div class="step">
-                    <img src="imgs/location.svg" class="img-fluid" alt="">
+                    <img src="public/images/location.svg" class="img-fluid" alt="">
                     <h5>Locate</h5>
                     <p>
                         start your journey be finding
@@ -86,7 +91,7 @@
                     </p>
                 </div>
                 <div class="step">
-                    <img src="imgs/lock.svg" class="img-fluid" alt="">
+                    <img src="public/images/lock.svg" class="img-fluid" alt="">
                     <h5>Unlock</h5>
                     <p>
                         unlock your bike by either using
@@ -95,7 +100,7 @@
                     </p>
                 </div>
                 <div class="step">
-                    <img src="imgs/start.svg" class="img-fluid" alt="">
+                    <img src="public/images/start.svg" class="img-fluid" alt="">
                     <h5>Time to start</h5>
                     <p>
                         now it's your time to have fun with your perfect journey.
@@ -109,20 +114,20 @@
             </h1>
             <div class="container">
                 <div class="illustration">
-                    <img src="imgs/what-our-customer-say.svg" class="img-fluid" alt="">
+                    <img src="public/images/what-our-customer-say.svg" class="img-fluid" alt="">
                 </div>
                 <div class="content">
                     <h5 class="customer-name">
                         Amr Arnous
                     </h5>
                     <div class="rate">
-                        <img src="imgs/rate.svg" alt="">
+                        <img src="public/images/rate.svg" alt="">
                     </div>
                     <p>
                         I have tried Ridebright bikes for 3 months and it’s really a good bikes also there team is really always helpful and amazing. it’s really an amazing company to deal with.
                     </p>
                     <div class="indicators">
-                        <img src="imgs/indicators.svg" width="50" alt="">
+                        <img src="public/images/indicators.svg" width="50" alt="">
                     </div>
                 </div>
             </div>
@@ -136,11 +141,11 @@
                     don’t need but a few steps, join now...
             </p>
             <a href="#" class="get-started">
-                <img src="imgs/wheel.svg" width="20" alt=""> 
+                <img src="public/images/wheel.svg" width="20" alt=""> 
                 <span>Get Started</span>
             </a>
             <a href="#" class="watch-demo">
-                <img src="imgs/play-demo.svg" width="20" alt=""> 
+                <img src="public/images/play-demo.svg" width="20" alt=""> 
                 <span>Play a Demo</span>
             </a>
         </section>
